# FreeCAD

./: AST_YAPTU工具安装位置详细分析.md  Draft模块架构解析_总目录.md  Draft模块架构解析_第1部分.md  Draft模块架构解析_第2部分.md  Draft模块架构解析_第3部分.md  Drawing工作台实现总结.md  Drawing工作台构建指南.md  FreeCAD_Python与C++对象对应机制详细分析.md  FreeCAD中AST和YAPTU的使用阶段详细分析.md  FreeCAD二次开发中AST_YAPTU工具使用分析.md  FreeCAD二次开发接口设计机制详细分析.md  FreeCAD信号机制对比分析.md  FreeCAD模块架构分析报告.md  FreeCAD模板系统自动生成Python绑定机制详细分析.md  FreeCAD消息响应机制详细分析.md  Python_AST解析器详细解析.md  YAPTU模板引擎详细解析.md  add_drawing_tools.py  drawing_workbench_simple.py  fix_drawing_workbench.py  force_add_drawing_toolbar.py  load_drawing_workbench.py
src/Mod/Drawing/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  DrawingGlobal.h  Init.py  InitGui.py  README.md  TestDrawing.py  demo_usage.py  drawing.dox
src/Mod/Drawing/App/: AppDrawing.cpp  AppDrawingPy.cpp  CMakeLists.txt  Circle.pyi  CirclePyImp.cpp  DrawingFeature.cpp  DrawingFeature.h  DrawingFeature.pyi  DrawingFeaturePyImp.cpp  Line.pyi  LinePyImp.cpp  PreCompiled.cpp  PreCompiled.h
src/Mod/Drawing/Gui/: AppDrawingGui.cpp  AppDrawingGuiPy.cpp  CMakeLists.txt  Command.cpp  Command.h  PreCompiled.h  ViewProviderDrawing.cpp  ViewProviderDrawing.h  Workbench.cpp  Workbench.h
